--- a/app/views/todolist.ejs
+++ b/app/views/todolist.ejs
@@ -9,6 +9,13 @@
         <%=title%>
     </title>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/vue/2.6.10/vue.min.js"></script>
+
+
+    <style>
+        body {
+            font-family: 'Courier New', Courier, monospace;
+        }
+    </style>
 </head>
 
 <body onload="body_onload()">
@@ -20,13 +27,17 @@
         </h1>
         <hr>
 
+        <input type="button" name="complete-all" id="complete-all" v-on:click="completeAll" value="Complete All">
         <input type="text" class="newTodo" id="newTodo" v-model="newTodo" v-on:keyup.enter="addTodo">
+
         <ul>
             <li v-for="(item, index) in data_list">
+                <input type="checkbox" v-model="item.status" style="display:none;">
                 <span v-if="item.id <=9">0{{ item.id }}</span>
                 <span v-else>{{ item.id }}</span>
-                <button type="button" id="btn{{ item.id }}">ok</button>
-                <span>{{ item.content }}</span>
+                <span v-on:click="itemToggleCompleted({ item: item, index: index })" v-bind:style="item.status ? 'text-decoration:line-through;' : ''">
+                    {{ item.content }}</span> {{ item.status ? ':)' : '' }}
+                <button v-on:click="removeTodolistItem({ item: item, index: index })">X</button>
             </li>
         </ul>
 
@@ -47,7 +58,8 @@
     var _data_list = JSON.parse('<%-data_list%>');
 
     console.log('pure js');
-
+    //defind vue app
+    var todolist_app = null;
     var body_onload = function() {
         //alert('body_onload');
         console.log('body_onload');
@@ -62,12 +74,13 @@
 
             console.log('vue ready');
 
-            var todolist_app = new Vue({
+            todolist_app = new Vue({
                 el: '#todolist-app',
                 data: {
                     data_list: _data_list,
                     title: '<%=title%>',
                     newTodo: '',
+
                 },
 
                 methods: {
@@ -78,8 +91,8 @@
                         if (this.newTodo === '') return false;
 
                         //get max id then plus 1
-                        var newid = Math.max.apply(Math, todolist_app.data_list.map(function(o) {
-                            return o.id;
+                        var newid = Math.max.apply(Math, todolist_app.data_list.map(function(item, index, array) {
+                            return item.id;
                         })) + 1;
 
                         var newTodo = {
@@ -91,7 +104,27 @@
                         this.data_list.push(newTodo);
                         this.newTodo = '';
 
+                    },
+                    completeAll(e) {
+                        console.log(e.target.value == 'on');
+
+                        this.data_list.forEach(function(item, index, array) {
+                            item.status = true;
+                        });
+
+                    },
+                    itemToggleCompleted(obj) {
+                        //obj = { data: equals this a item data, index: the trigger item index }
+                        console.log(obj.index);
+                        (this.data_list[obj.index].status) ? this.data_list[obj.index].status = false: this.data_list[obj.index].status = true;
+                    },
+                    removeTodolistItem(obj) {
+                        //obj = { data: equals this a item data, index: the trigger item index }
+                        console.log(obj);
+                        var removed = this.data_list.slice(obj.index, 1);
+                        console.log(removed);
                     }
+
                 },
             });
 
