--- a/app/views/todolist.ejs
+++ b/app/views/todolist.ejs
@@ -9,7 +9,8 @@
         <%=title%>
     </title>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/vue/2.6.10/vue.min.js"></script>
-
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/limonte-sweetalert2/8.11.8/sweetalert2.min.css" integrity="sha256-2bAj1LMT7CXUYUwuEnqqooPb1W0Sw0uKMsqNH0HwMa4=" crossorigin="anonymous" />
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/limonte-sweetalert2/8.11.8/sweetalert2.min.js" integrity="sha256-7OUNnq6tbF4510dkZHCRccvQfRlV3lPpBTJEljINxao=" crossorigin="anonymous"></script>
 
     <style>
         body {
@@ -37,7 +38,7 @@
                 <span v-else>{{ item.id }}</span>
                 <span v-on:click="itemToggleCompleted({ item: item, index: index })" v-bind:style="item.status ? 'text-decoration:line-through;' : ''">
                     {{ item.content }}</span> {{ item.status ? ':)' : '' }}
-                <button v-on:click="removeTodolistItem({ item: item, index: index })">X</button>
+                <button v-on:click="removeTodolistItem({ item: item, index: index })">it a delay</button>
             </li>
         </ul>
 
@@ -58,9 +59,16 @@
     var _data_list = JSON.parse('<%-data_list%>');
 
     console.log('pure js');
+
+    Swal.fire('loading...');
+
+
     //defind vue app
     var todolist_app = null;
     var body_onload = function() {
+
+
+
         //alert('body_onload');
         console.log('body_onload');
         init_vue();
@@ -77,7 +85,7 @@
             todolist_app = new Vue({
                 el: '#todolist-app',
                 data: {
-                    data_list: _data_list,
+                    data_list: _data_list.slice(),
                     title: '<%=title%>',
                     newTodo: '',
 
@@ -113,22 +121,33 @@
                         });
 
                     },
-                    itemToggleCompleted(obj) {
-                        //obj = { data: equals this a item data, index: the trigger item index }
-                        console.log(obj.index);
-                        (this.data_list[obj.index].status) ? this.data_list[obj.index].status = false: this.data_list[obj.index].status = true;
+                    itemToggleCompleted(item_obj) {
+                        //item_obj = { data: equals this a item data, index: the trigger item index }
+                        console.log(item_obj.index);
+                        (this.data_list[item_obj.index].status) ? this.data_list[item_obj.index].status = false: this.data_list[item_obj.index].status = true;
                     },
-                    removeTodolistItem(obj) {
-                        //obj = { data: equals this a item data, index: the trigger item index }
-                        console.log(obj);
-                        var removed = this.data_list.slice(obj.index, 1);
-                        console.log(removed);
+                    removeTodolistItem(item_obj) {
+                        //item_obj = { data: equals this a item data, index: the trigger item index }
+                        console.log(item_obj);
+                        //var removed = this.data_list.slice(item_obj.index, 1);
+                        //console.log(removed);
+
+                        // this.data_list = this.data_list.filter(function(item, index, array) {
+                        //     return item.index !== index;
+                        // });
+
+                        //this.data_list.splice(item_obj.index, 1); //沒效
+                        this.$delete(this.data_list, item_obj.index);
+
+
                     }
 
                 },
             });
 
             console.log('vue loaded');
+
+            Swal.close();
 
         } else
             alert('Vue is undefinded');
