--- a/m5/views/todolist_input.ejs
+++ b/m5/views/todolist_input.ejs
@@ -5,7 +5,7 @@
         <h1>
             {{ title }}
         </h1>
-        20200118
+        Input page (20200118)
         <hr>
 
         <input type="button" name="complete-all" id="complete-all" v-on:click="completeAll" value="Complete All">
